--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -122,3 +122,30 @@ watchfiles==1.1.1
 websockets==15.0.1
 yarl==1.22.0
 zipp==3.23.0
+
+
+flask
+flask-cors
+tensorflow
+numpy
+pillow
+gunicorn
+pymongo
+python-dotenv
+fastapi
+uvicorn
+gunicorn
+
+fastapi
+uvicorn
+gunicorn
+numpy
+pandas
+scikit-learn
+opencv-python
+Pillow
+torch
+torchvision
+python-multipart
+tensorflow
+flask
