--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,7 +59,7 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build",
+    "build": "NODE_OPTIONS=--max_old_space_size=4096 craco build",
     "test": "craco test"
   },
   "browserslist": {
